force-app/main/default/objects/Integration_Transmission__c/Integration_Transmission__c.object-meta.xml
<CustomObject>
    <label>Integration Transmission</label>
    <nameField>
        <displayFormat>TRN-{00000}</displayFormat>
        <label>Transmission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Transmissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>