force-app/main/default/objects/Integration_Transmission__c/fields/Claim_Token__c.field-meta.xml
<CustomField>
    <fullName>Claim_Token__c</fullName>
    <label>Claim Token</label>
    <length>36</length>
    <type>Text</type>
</CustomField>