force-app/main/default/objects/Integration_Transmission__c/fields/External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Id__c</fullName>
    <label>External Record Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>