force-app/main/default/objects/Integration_Transmission__c/fields/External_Record_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Record Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>