force-app/main/default/objects/Integration_Transmission__c/fields/External_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Salesforce_Id__c</fullName>
    <label>External Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>