force-app/main/default/objects/Integration_Transmission__c/fields/Last_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Code__c</fullName>
    <label>Last Error Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>