force-app/main/default/objects/Integration_Transmission__c/fields/Last_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Code__c</fullName>
    <label>Last Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>