force-app/main/default/objects/Integration_Transmission__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE_REFERRAL</fullName>
                <label>Create Referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>