force-app/main/default/objects/Integration_Transmission__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Integration Transmissions</relationshipLabel>
    <relationshipName>Integration_Transmissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>