force-app/main/default/objects/Integration_Transmission__c/fields/Succeeded_At__c.field-meta.xml
<CustomField>
    <fullName>Succeeded_At__c</fullName>
    <label>Succeeded At</label>
    <type>DateTime</type>
</CustomField>