force-app/main/default/objects/Integration_Transmission__c/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATTORNEY</fullName>
                <label>Attorney</label>
            </value>
            <value>
                <fullName>PROVIDER</fullName>
                <label>Provider</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>