force-app/main/default/objects/Integration_Transmission__c/fields/Transmission_Key__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Key__c</fullName>
    <externalId>true</externalId>
    <label>Transmission Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>